--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,4 +37,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test run_all.py
       run: |
-        run_all.py
+        python3 run_all.py
